Finalize app
