# share-api/src/main/kotlin/hu/bme/aut/shareapi/dto/req/DeleteSharesReq.kt
@@ -1,0 +1,5 @@
+package hu.bme.aut.shareapi.dto.req
+
+data class DeleteSharesReq(
+    val movesongEmail: String,
+)
